<resources>
    <string name="app_name">inTiVi</string>
    <string name="loginHeaderText">Login</string>
    <string name="signInButtonText">Sign in</string>
    <string name="signUpButtonText">Sign up</string>
    <string name="passwordEditTextHint">Password</string>
    <string name="loginEditTextHint">E-mail</string>
    <string name="repeatPassEditTextHint">Repeat password</string>
    <string name="patronageLogo">Patronage logo</string>

    <string name="detailsTitleText">The Witcher</string>
    <string name="detailsYearText">2019</string>
    <string name="detailsSeasonsText">2 seasons</string>
    <string name="detailsPGText">PG</string>
    <string name="detailsDescriptionText">Geralt of Rivia, a mutated monster-hunter for hire, journeys toward his destiny in a turbulent world where people often prove more wicked than beasts.\n</string>
    <string name="detailsWatchButtonText">Watch</string>

    <string name="heartIcon">Heart icon</string>
    <string name="backArrow">Back arrow</string>
    <string name="helloWorld">Hello World!</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="kids">Kids</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="genres">Genres</string>
    <string name="forgotPasswordText">Forgot password</string>
    <string name="emailValidMessage">Please enter a correct e-mail address</string>
    <string name="passwordValidMessage">Password must be between 5 and 40 characters long (no spaces)</string>
    <string name="repeatPassValidMessage">Passwords do not match</string>
    <string name="resetPassword">Reset password</string>
    <string name="reenterNewPassword">Re-enter new password</string>
    <string name="showPassword">Show password</string>
    <string name="emailHasBeenSent">Email has been sent</string>

    <string name="signUp">Sign up</string>
    <string name="signIn">Sign in</string>
    <string name="moonfal">Moonfal</string>
    <string name="videoPlayerTitle">S1: The beginnings</string>
    <string name="videoTime">-59:13</string>

    <string name="media_url_mp3">https://storage.googleapis.com/exoplayer-test-media-0/play.mp3</string>
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>

    <string name="emailInvalidError">Email must be valid.</string>
    <string name="emailIsEmpty">Email can\'t be empty.</string>
    <string name="emailTooLongError">Email must be less than 320 characters long.</string>
    <string name="emailLocalPartTooLongError">Local part must be 64 characters long.</string>
    <string name="emailDomainPartTooLongError">Domain part must be 255 characters long or less.</string>
    <string name="emailStartWithError">Local part must start with a digit or a letter.</string>
    <string name="emailEndWithError">Local part must end with a digit or a letter.</string>
    <string name="emailConsecutiveDotsError">Consecutive dots are not allowed.</string>

    <string name="passwordTooShort">Password must be at least 8 characters long.</string>
    <string name="passwordTooLong">Password must be less than 128 characters long.</string>
    <string name="passwordNoDigit">Password must contain at least one digit.</string>
    <string name="passwordNoLowercase">Password must contain at least one lower case letter.</string>
    <string name="passwordNoUppercase">Password must contain at least one upper case letter.</string>
    <string name="passwordNoSpecialCharacter">Password must contain at least one special character.</string>
    <string name="passwordsDoNotMatch">Passwords must match.</string>

    <string name="incorrectPasswordOrEmailError">Incorrect password or email.</string>
    <string name="emailAlreadyTakenError">Email already taken.</string>
    <string name="serverConnectionFailedError">Server connection failed.</string>
    <string name="failed_fetch_request">Failed fetch request.</string>
    <string name="no_movies_error_message"><![CDATA[Sorry, couldn\'t find any movies. \n :<]]></string>
    <string name="loading_movies_message">Loading movies…</string>
    <string name="loading_favourites_error">Something went wrong…</string>
    <string name="popular">Popular</string>
    <string name="unknown">\???</string>
</resources>