<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SignUpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-39dp"
        tools:layout_editor_absoluteY="-134dp">

        <EditText
            android:id="@+id/loginEditText"
            android:layout_marginHorizontal="@dimen/loginMarginHorizontal"
            android:layout_marginTop="@dimen/loginEmailMarginTop"
            android:hint = "@string/loginEditTextHint"
            android:inputType="text"
            style="@style/inputText"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_below="@id/loginEditText"
            android:layout_marginHorizontal="@dimen/loginMarginHorizontal"
            android:layout_marginTop="@dimen/loginPasswordMarginTop"
            android:hint="@string/passwordEditTextHint"
            android:inputType="textPassword"
            style="@style/inputText"/>

        <EditText
            android:id="@+id/repeatPassword"
            android:layout_below="@id/passwordEditText"
            android:layout_marginHorizontal="@dimen/loginMarginHorizontal"
            android:layout_marginTop="@dimen/loginPasswordMarginTop"
            android:hint="@string/repeatPassEditTextHint"
            android:inputType="textPassword"
            style="@style/inputText"/>

    </RelativeLayout>

    <Button
        android:id="@+id/signUpButton"
        android:layout_marginHorizontal="@dimen/loginMarginHorizontal"
        android:text="@string/signUpButtonText"
        app:cornerRadius="@dimen/detailsWatchButtonCornerRadius"
        style="@style/logInUpButton"/>

</FrameLayout>