<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center|left"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="@dimen/app_logo_height"
            android:layout_height="@dimen/app_logo_height"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/app_logo_margin_start"
            android:background="@drawable/app_logo" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_name_margin_start"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/headline6" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filters_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:layout_marginStart="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_bar">

        <TextView
            android:id="@+id/filter_button_movies"
            android:text="@string/movies"
            style="@style/filter_button_style"/>

        <TextView
            android:id="@+id/button2"
            android:text="@string/series"
            style="@style/filter_button_style"/>

        <TextView
            android:id="@+id/button"
            android:text="@string/kids"
            style="@style/filter_button_style"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearOuterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/mainOuterLayoutPaddingTop"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/filters_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <include layout="@layout/item_grid_home"/>
    </LinearLayout>

    <View
        android:id="@+id/footer_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"
        app:layout_constraintBottom_toTopOf="@id/footer_tab" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/footer_tab"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:background="@color/steel_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabGravity="fill"
        app:tabIconTint="@color/white"
        app:tabIndicator="@drawable/sh_tab_indicator"
        app:tabIndicatorColor="@color/green"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorGravity="top"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        app:tabPaddingEnd="24dp"
        app:tabPaddingStart="24dp"
        app:tabPaddingTop="5dp"
        app:tabTextAppearance="@style/tabTextAppearance"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/home_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_home"
            android:text="@string/home" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/favourites_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_favourite"
            android:text="@string/favourites" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/genres_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_genres"
            android:text="@string/genres" />
    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>