<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/header_bar"
        style="@style/headerBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="@dimen/app_logo_height"
            android:layout_height="@dimen/app_logo_height"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/app_logo_margin_start"
            android:background="@drawable/app_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_name_margin_start"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/headline6" />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/loginTabLayout"
        android:layout_width="@dimen/tabLayoutWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tabLayoutMarginTop"
        android:background="@color/bastille"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_bar"
        app:tabIndicatorColor="@color/green"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="@dimen/tabIndicatorHeight"
        app:tabTextAppearance="@style/loginTabText"
        app:tabTextColor="@color/grey_white">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/loginViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTabLayout" />

    <FrameLayout
        android:id="@+id/loading_indicator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/loading_background"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/blurred_background"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>