<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutResetPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/resetPasswordToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewResetPasswordBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17.33dp"
                android:layout_marginTop="18.67dp"
                android:contentDescription="@string/backArrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_chevron_left_stroke" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

<!-- this TextView should have "inter_medium" font -->
    <TextView
        android:id="@+id/textViewResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/inter_semibold"
        android:lineSpacingExtra="8sp"
        android:text="@string/resetPassword"
        android:textColor="#DEE2E2"
        android:textSize="20sp"
        android:translationY="-3.9sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayoutResetPassword" />

    <EditText
        android:id="@+id/editTextResetPassword"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:drawableEnd="@drawable/ic_show_stroke"
        android:fontFamily="@font/inter"
        android:hint="@string/passwordEditTextHint"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="22dp"
        android:textColor="#E9E9E9"
        android:textSize="16sp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResetPassword"
        tools:ignore="RtlSymmetry" />
    <!--
        <ImageView
            android:id="@+id/imageViewShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:contentDescription="@string/show_password"
            android:src="@drawable/ic_show_stroke"
            app:layout_constraintBottom_toBottomOf="@+id/editTextResetPassword"
            app:layout_constraintEnd_toEndOf="@id/editTextResetPassword"
            app:layout_constraintTop_toTopOf="@+id/editTextResetPassword" />
    -->
    <EditText
        android:id="@+id/editTextResetPassword2"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/inter"
        android:hint="@string/re_enter_new_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="#E9E9E9"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextResetPassword"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonResetPassword"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/resetPassword"
        android:textAllCaps="false"
        android:textColor="#1F1D2B"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>